style.css
/*
 * Theme Name: Regal Voyages
 * Description: Word Press Theme for Regal Voyages Travel Agency
 * Author: Kiran Nambiar
 * Version: 0.1
 * 
 */

html {
	font-size:12px;
    font-family: "Fira Sans", sans-serif;
}

body {
    font-family: "Fira Sans", sans-serif;
}

#herospace {
    width:100%;
    max-width: 1024px;
    min-width: 100%;
    min-height: 40rem;
    background-repeat: no-repeat;
    background-size:fill;
    background-position: center top;
    background-attachment: fixed;
}

div.content {
    padding-top:10rem;
}

div.featured-image {
    float:left;
    width:70%;
    height: 30rem;
    overflow:hidden;
}

img.featured-image {
    height:100%;
}

.portrait img {
    width: 100%;
    height:auto;
}
.landscape img {
    width: 100%;
    height:auto;
}

div.main {
    width: 75%;
    max-width:1024px;
    margin-right: auto;
    margin-left: auto;
}

div.footer {
    width:75%;
    max-width: 1024px;
    margin-left:auto;
    margin-right:auto;
    padding-top:3rem;
    height:30rem;
}

h1.category {
    font-family: "Fira Sans", sans-serif;
    font-size: 2.5rem;
}

h3.category-titles {
    margin: 0 0 0 0;
    padding-top:3rem;
    padding-bottom:3rem;
    border-bottom: solid;
    vertical-align:middle;
    font-size: 1.5rem;
}

h3.category-titles:last-child {
    border-bottom: none;
}

div.category-titles {
    padding-left:2rem;
    float:left;
    height: 30rem;
}


@media (max-width:800px) {
	html {
		font-size:12px;
	}

    div.featured-image {
        float:none;
        width:100%;
        height: 30rem;
        overflow:hidden;
    }

    div.category-titles {
        padding-left:2rem;
        float:none;
        height: 30rem;
    }
}


/*  Menu bar css styling  */

.menu-main-nav-container {
    padding: 0;
    margin-left: auto;
    margin-right:auto;
    border: 0;
    width: 75%;
    max-width: 1024px;
}
.menu-main-nav-container ul, .menu-main-nav-container li {
    list-style: none;
    margin: 0;
    padding: 0;
}
.menu-main-nav-container ul {
    position: relative;
    z-index: 19;
}
.menu-main-nav-container ul li {
    float: left;
    min-height: 1px;
    vertical-align: middle;
}
.menu-main-nav-container ul li:last-child {
    border-right: none;
}
.menu-main-nav-container ul li.hover, .menu-main-nav-container ul li:hover {
    position: relative;
    z-index: 20;
    cursor: default;
}
.menu-main-nav-container ul ul {
    visibility: hidden;
    position: absolute;
    top: 100%;
    left: 0;
    z-index: 21;
    width: 100%;
}
.menu-main-nav-container ul ul li {
    float: none;
}
.menu-main-nav-container ul ul ul {
    top: 0;
    left: auto;
    right: -99.5%;
}
.menu-main-nav-container ul li:hover > ul {
    visibility: visible;
}
.menu-main-nav-container ul ul {
    bottom: 0;
    left: 0;
}
.menu-main-nav-container ul ul {
    margin-top: 0;
}
.menu-main-nav-container ul ul li {
    font-weight: normal;
}
.menu-main-nav-container a {
    display: block;
    line-height: 1em;
    text-decoration: none;
    color:#00000;
}
.menu-main-nav-container {
    background: #ffffff;
    font-size: 12px;
}
.menu-main-nav-container > ul {
    display: inline-block;
}
.menu-main-nav-container:after, .menu-main-nav-container ul:after {
    content: '';
    display: block;
    clear: both;
}
.menu-main-nav-container a {
    color: #000000;
    padding: 0 12px;
}
.menu-main-nav-container ul {
    text-transform: uppercase;
}
.menu-main-nav-container ul ul {
    text-transform: none;
    min-width: 190px;
}
.menu-main-nav-container ul ul a {
    color: #000000;
    border-top: 0 none;
    line-height: 150%;
    padding: 16px 20px;
}
.menu-main-nav-container ul ul ul {
    border-top: 0 none;
}
.menu-main-nav-container ul ul li {
    position: relative;
}
.menu-main-nav-container > ul > li > a {
    line-height: 48px;
}
.menu-main-nav-container ul ul li:first-child > a {
    border-top: 1px solid #0082e7;
}
.menu-main-nav-container ul ul li:hover > a {
    background: #ffffff;
    color: #000000;
}
.menu-main-nav-container ul ul li:last-child > a {
    border-radius: 0 0 3px 3px;
    box-shadow: 0 1px 0 #1b9bff;
}
.menu-main-nav-container ul ul li:last-child:hover > a {
    border-radius: 0 0 0 3px;
}
.menu-main-nav-container ul ul li.has-sub > a:after {
    content: '+';
    position: absolute;
    top: 50%;
    right: 15px;
    margin-top: -8px;
}
.menu-main-nav-container ul li:hover > a, .menu-main-nav-container ul li.active > a {
    background: #000000;
    color: #FFF;
}
.menu-main-nav-container ul li.has-sub > a:after {
    content: '+';
    margin-left: 5px;
}
.menu-main-nav-container ul li.last ul {
    left: auto;
    right: 0;
}
.menu-main-nav-container ul li.last ul ul {
    left: auto;
    right: 99.5%;
}

